--- a/sass/abstracts/_abstracts.scss
+++ b/sass/abstracts/_abstracts.scss
@@ -1,4 +1,4 @@
-@use 'variables';
-@use 'functions';
-@use 'mixins';
-@use 'placeholders';
+@import 'variables';
+@import 'functions';
+@import 'mixins';
+@import 'placeholders';
