--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,9 +1,13 @@
-@use "grid";
-@use "footer";
-@use "forms";
-@use "navbar";
-@use "sidebar";
-@use "header";
-@use "container";
-@use "main";
-@use "body";
+@import "grid";
+@import "footer_contact";
+@import "forms";
+@import "navbar";
+@import "sidebar";
+@import "header_001";
+@import "container";
+@import "main";
+@import "body";
+@import "container_001";
+@import "container_002";
+@import "container_003";
+@import "about_me";
