--- a/sass/layout/_container_003.scss
+++ b/sass/layout/_container_003.scss
@@ -62,3 +62,22 @@
         height: 3px;
         background-color: rgb(61, 61, 61);
 }
+@include breakpoint(tablet) {
+    .container_003 {
+        .projects {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            column-gap: 3%;
+        }
+        .links_projects {
+            display: flex;
+            justify-content: space-between;
+            margin-left: 20px;
+            margin-right: 20px;
+            align-items: center;
+            .code_projects {
+                gap: 15%;
+            }
+        }
+    }
+}
