--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,23 @@ button::after {
   outline: none;
   caret-color: #d9d9d9;
 }
-.footer_contact .formulario form button {
+.footer_contact button {
   background-color: #242424;
+  margin-left: 10%;
 }
 
+@media (min-width: 768px) {
+  .footer_contact .header_contact h3 {
+    font-size: 55px;
+  }
+  .footer_contact .header_contact p {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+  .footer_contact .formulario button {
+    margin-left: 50%;
+  }
+}
 .header_001 {
   max-width: 100%;
   margin-top: 25px;
@@ -117,6 +130,15 @@ button::after {
   margin-top: 25px;
 }
 
+@media (min-width: 768px) {
+  .header_001 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
 .container {
   max-width: 100%;
   margin-top: 25px;
@@ -181,6 +203,23 @@ body {
   margin-top: 45px;
 }
 
+@media (min-width: 768px) {
+  .container_001 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 10%;
+  }
+  .part_001 {
+    width: 40%;
+  }
+  .part_001 button {
+    margin-top: 15px !important;
+  }
+  .part_002 {
+    width: 60%;
+  }
+}
 .container_002 {
   display: flex;
   flex-direction: column;
@@ -229,6 +268,14 @@ body {
   background-color: rgb(61, 61, 61);
 }
 
+@media (min-width: 768px) {
+  .container_002 .lenguajes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .container_003 {
   margin-left: 5px;
   margin-right: 5px;
@@ -295,6 +342,23 @@ body {
   background-color: rgb(61, 61, 61);
 }
 
+@media (min-width: 768px) {
+  .container_003 .projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3%;
+  }
+  .container_003 .links_projects {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 20px;
+    align-items: center;
+  }
+  .container_003 .links_projects .code_projects {
+    gap: 15%;
+  }
+}
 .body_aboutme {
   background-color: #151515;
   margin-left: 10%;
