--- a/sass/layout/_about_me.scss
+++ b/sass/layout/_about_me.scss
@@ -33,3 +33,11 @@
         padding-bottom: 15%;
     }
 }
+@include breakpoint(desktop) {
+    .body_aboutme {
+        p {
+            margin-top: 5%;
+            font-size: 24px;
+        }
+    }
+}
