--- a/sass/layout/_container_002.scss
+++ b/sass/layout/_container_002.scss
@@ -54,3 +54,13 @@
         }
     }
 }
+@include breakpoint(desktop) {
+    .container_002 {
+       .lenguajes {
+            aside {
+                gap: 10px;
+            }
+        }  
+    }
+   
+}
