--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $bp-desktop-xl: 1440px;
 /* COLORS */
 $color-primary: #151515;
 $color-secondary: #7E26F8;
+$color-extra: #d526f8;
 $greymedium: #242424;
 $greylight: #d9d9d9;
 
