--- a/sass/layout/_container_001.scss
+++ b/sass/layout/_container_001.scss
@@ -28,10 +28,10 @@
         .marca::after {
             content: "";
             position: absolute;
-            bottom: -10px;
+            bottom: -25px;
             left: 0;
             width: 100%;
-            height: 3px;
+            height: 5px;
             background-color: $color-secondary;
             transform: rotate(-3deg);
             transform-origin: left bottom;
@@ -55,14 +55,43 @@
     }
     .part_001 {
         width: 40%;
+        .buttons_part_001 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
         button {
             margin-top: 15px !important;
         }
     }
     .part_002 {
         width: 60%;
-        img {
-           
+    }
+}
+@include breakpoint(desktop) {
+    .container_001 {
+        .part_001 {
+            .buttons_part_001 {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                gap: 70px;
+                margin-top: 10%;
+        }
+            h1 {
+                font-size: 130px;
+                text-align: left;
+                line-height: 110px;
+            }
+            p {
+                font-size: 45px;
+            }
+        }
+        .part_002 {
+            img {
+                width: 103%;
+            }
         }
     }
 }
