--- a/sass/layout/_container_002.scss
+++ b/sass/layout/_container_002.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 90px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
     position: relative;
     h2 {
         font-family: $font-primary;
