--- a/sass/layout/_container_003.scss
+++ b/sass/layout/_container_003.scss
@@ -1,6 +1,6 @@
 .container_003 {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
     position: relative;
     .header_container_003 {
         display: flex;
